[metadata]
name = contomo
version = 0.0.1
author = Axel Henningsson
author_email = nilsaxelhenningsson@gmail.com
description = Tools for projected advection PDE reconstructions in high speed sparse data tomography imaging.  
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/AxelHenningsson/contomo
project_urls =
    Documentation = https://github.com/AxelHenningsson/contomo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
